--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
+    implementation 'com.google.android.gms:play-services-ads:11.0.4'
 }
 
 
