--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
 
 android {
     compileSdkVersion 26
@@ -43,8 +48,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.google.android.gms:play-services-ads:11.0.4'
     kapt "android.arch.persistence.room:compiler:1.0.0"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
     implementation "android.arch.persistence.room:runtime:1.0.0"
-
 
 
 }
