--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,9 @@
 
         <service
             android:name=".Services.CurrencyService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".TransactionHistory"></activity>
     </application>
 
 </manifest>
