--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation "com.android.support:support-compat:26.1.0"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.firebase:firebase-storage:11.0.4'
-    implementation 'com.google.firebase:firebase-auth:11.0.4'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
@@ -46,9 +44,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    implementation 'com.google.android.gms:play-services-ads:11.0.4'
+    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    implementation 'com.google.firebase:firebase-ads:11.8.0'
     kapt "android.arch.persistence.room:compiler:1.0.0"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
     implementation "android.arch.persistence.room:runtime:1.0.0"
 
 
