--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="com.andyisdope.cryptowatcher">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -48,6 +46,11 @@
             android:exported="false" />
 
         <activity android:name=".VaultActivity" />
+
+        <service
+            android:name=".Services.PortfolioService"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE" ></service>
     </application>
 
 </manifest>
